# sre-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.drawio  inventory  mkdocs.yml  pyproject.toml
docs/: index.md  sample-runbook.md
docs/architecture/: cicd.md  networking.md  platform-overview.md  storage.md
docs/onboarding/: access-requests.md  new-engineer.md  tooling.md
docs/policies/: change-management.md  incident-response.md  on-call.md
docs/runbooks/: certificate-renewal.md  database-failover.md  high-memory-usage.md  node-not-ready.md  pod-crashloopbackoff.md
docs/troubleshooting/: dns-resolution.md  image-pull-errors.md  ingress-502.md  pvc-issues.md
playbooks/: ansible_tools.json  check_security_vulnerabilities.yml  get_host_info.yml  ping_host.yml
src/: __init__.py  agent.py  cli.py  config.py
src/ingestion/: __init__.py  chunker.py  cleaner.py  embedder.py  parser.py  standardizer.py
src/mcp_servers/: __init__.py  ansible_server.py  rag_server.py
src/providers/: __init__.py  base.py  ollama_provider.py  watsonx_provider.py
src/rag/: __init__.py  generator.py  retriever.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cleaner.py  test_providers.py  test_retriever.py
